workload/ray/rayserve/model-multiplexing/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ray-vllm-route
spec:
  parentRefs:
    - name: vllm-lb
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ray-vllm-models
          group: inference.networking.x-k8s.io
          kind: InferencePool
